Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/channel/channel_payment_staff_bill.xhtml
+++ b/src/main/webapp/channel/channel_payment_staff_bill.xhtml
@@ -9,10 +9,12 @@
     <h:body>
         <ui:composition template="/resources/template/template.xhtml">
             <ui:define name="content">
-                <h:form>
-                    <h:panelGroup rendered="#{!channelStaffPaymentBillController.printPreview}" styleClass="alignTop" >
-                        <p:panel header="Staff Payments" >
-                            <h:panelGrid columns="1" >
+
+                <h:panelGroup rendered="#{!channelStaffPaymentBillController.printPreview}" styleClass="alignTop" >
+                    <p:panel header="Staff Payments" >
+                        <h:panelGrid columns="1" >
+
+                            <h:form  >
                                 <h:panelGrid columns="2" >
                                     <h:panelGrid columns="2">
                                         <p:outputLabel value="Speciality" />
@@ -59,21 +61,22 @@
 
 
                                 </h:panelGrid>
+                            </h:form>
 
-
+                            <h:form  >
                                 <p:dataTable id="tblFee" value="#{channelStaffPaymentBillController.dueBillFees}" selection="#{channelStaffPaymentBillController.payingBillFees}" rowIndexVar="i" var="bf" rowKey="#{bf.id}" >
 
                                     <f:ajax  event="rowSelectCheckbox" execute="tblFee" listener="#{channelStaffPaymentBillController.performCalculations()}"   
-                                             render=":#{p:resolveFirstComponentWithId('scStaff',view).clientId}  :#{p:resolveFirstComponentWithId('lblDue',view).clientId} :#{p:resolveFirstComponentWithId('lblPay',view).clientId} tblFee"  />  
+                                             render=":#{p:resolveFirstComponentWithId('lblDue',view).clientId} :#{p:resolveFirstComponentWithId('lblPay',view).clientId}"  />  
 
                                     <f:ajax  event="rowUnselectCheckbox" execute="tblFee" listener="#{channelStaffPaymentBillController.performCalculations()}"   
-                                             render=":#{p:resolveFirstComponentWithId('scStaff',view).clientId}  :#{p:resolveFirstComponentWithId('lblDue',view).clientId} :#{p:resolveFirstComponentWithId('lblPay',view).clientId} tblFee"  />  
+                                             render=":#{p:resolveFirstComponentWithId('lblDue',view).clientId} :#{p:resolveFirstComponentWithId('lblPay',view).clientId}"  />  
 
                                     <f:ajax  event="toggleSelect" execute="tblFee" listener="#{channelStaffPaymentBillController.performCalculations()}"   
-                                             render=":#{p:resolveFirstComponentWithId('scStaff',view).clientId}  :#{p:resolveFirstComponentWithId('lblDue',view).clientId} :#{p:resolveFirstComponentWithId('lblPay',view).clientId} tblFee"  />
+                                             render=":#{p:resolveFirstComponentWithId('lblDue',view).clientId} :#{p:resolveFirstComponentWithId('lblPay',view).clientId}"  />
 
                                     <f:ajax  event="rowSelect" execute="tblFee" listener="#{channelStaffPaymentBillController.performCalculations()}"   
-                                             render=":#{p:resolveFirstComponentWithId('scStaff',view).clientId}  :#{p:resolveFirstComponentWithId('lblDue',view).clientId} :#{p:resolveFirstComponentWithId('lblPay',view).clientId} tblFee"  />
+                                             render=":#{p:resolveFirstComponentWithId('lblDue',view).clientId} :#{p:resolveFirstComponentWithId('lblPay',view).clientId}"  />
 
                                     <p:column selectionMode="multiple" ></p:column>
 
@@ -141,9 +144,12 @@
                                     </p:column>
 
                                 </p:dataTable>
+                            </h:form>
 
 
 
+
+                            <h:form  >
                                 <p:panel id="pTotals"  >
                                     <f:facet name="header" >
                                         <h:outputLabel value="Payment Details" />
@@ -154,7 +160,7 @@
                                             <f:convertNumber pattern="#,##0.00" />
                                         </h:outputLabel>
                                         <h:outputLabel value="Paying This time" ></h:outputLabel>
-                                        <h:outputLabel id="lblPay"  value="#{channelStaffPaymentBillController.totalPaying}" >
+                                        <h:outputLabel id="lblPay"  value="#{channelStaffPaymentBillController.totalPaying }" >
                                             <f:convertNumber pattern="#,##0.00" />
                                         </h:outputLabel>  
                                     </h:panelGrid>
@@ -162,28 +168,33 @@
                                 <h:panelGroup >
 
                                     <h:outputLabel value="Payment Method" ></h:outputLabel>
-                                    <p:selectOneMenu  id="cmbPay" style="width: 400px;" value="#{channelStaffPaymentBillController.paymentMethod}" >
-                                        <f:selectItem itemLabel="Please select a Payment method" />
+                                    <p:selectOneMenu  id="cmbPay" style="width: 400px;" 
+                                                      value="#{channelStaffPaymentBillController.paymentMethod}" >
+                                        <!--<f:selectItem itemLabel="Please select a Payment method" />-->
                                         <f:selectItems value="#{enumController.paymentMethodsWithoutCredit}"/>
                                     </p:selectOneMenu>
 
-                                    <p:commandButton value="Pay" action="#{channelStaffPaymentBillController.settleBill()}" 
-                                                     onclick="onSubmitButton();" >
-                                        <f:ajax execute="@this cmbPay tblFee scStaff" render="@all" />
+                                    <p:commandButton id="btnPay" ajax="false" value="Pay" 
+                                                     action="#{channelStaffPaymentBillController.settleBill()}" 
+                                                     >
+                                        <f:ajax execute="btnPay cmbPay" render="@all" />
                                     </p:commandButton>
                                 </h:panelGroup>
-                            </h:panelGrid>
-
-                        </p:panel>
-                    </h:panelGroup>
+                            </h:form>
 
 
+                        </h:panelGrid>
 
-                    <h:panelGroup id="gpBillPreview" rendered="#{channelStaffPaymentBillController.printPreview}">
-                        <p:commandButton ajax="false" styleClass="noPrintButton" value="New Bill" action="#{channelStaffPaymentBillController.makenull()}" />
-                        <bi:staffBill_1  controller="#{channelStaffPaymentBillController}" bill="#{channelStaffPaymentBillController.current}" dup="false"/>
-                    </h:panelGroup>
-                </h:form>
+                    </p:panel>
+                </h:panelGroup>
+
+
+
+                <h:panelGroup id="gpBillPreview" rendered="#{channelStaffPaymentBillController.printPreview}">
+                    <p:commandButton ajax="false" styleClass="noPrintButton" value="New Bill" action="#{channelStaffPaymentBillController.makenull()}" />
+                    <bi:staffBill_1  controller="#{channelStaffPaymentBillController}" bill="#{channelStaffPaymentBillController.current}" dup="false"/>
+                </h:panelGroup>
+
 
 
 
