Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/webcontent/index.xhtml
+++ b/src/main/webapp/webcontent/index.xhtml
@@ -18,10 +18,16 @@
                     <div class="col-3" >
                         <h:form >
                             <div class="col" >
-                                <h:commandButton class="btn btn-primary m-2 w-75" value="Add New Web Content" action="#{webContentController.toAddNewWebContent()}" ></h:commandButton>
+                                <h:commandButton class="btn btn-primary m-2 w-75" value="Add New Short Contents" action="#{webContentController.toAddNewWebContent()}" ></h:commandButton>
                             </div>
                             <div class="col" >
-                                <h:commandButton  class="btn btn-primary m-2 w-75" value="List Web Content" action="#{webContentController.toListWebContent()}" ></h:commandButton>
+                                <h:commandButton class="btn btn-primary m-2 w-75" value="Add New Long Contents" action="#{webContentController.toAddNewWebContent()}" ></h:commandButton>
+                            </div>
+                            <div class="col" >
+                                <h:commandButton class="btn btn-primary m-2 w-75" value="Add New List Contents" action="#{webContentController.toAddNewWebContent()}" ></h:commandButton>
+                            </div>
+                            <div class="col" >
+                                <h:commandButton  class="btn btn-primary m-2 w-75" value="List Web Contents" action="#{webContentController.toListWebContent()}" ></h:commandButton>
                             </div>
                             <div class="col" >
                                 <h:commandButton  class="btn btn-primary m-2 w-75" value="Add Web Image" action="#{uploadController.toAddNewUpload()}" ></h:commandButton>
