--- a/src/main/webapp/lab/investigation_format.xhtml
+++ b/src/main/webapp/lab/investigation_format.xhtml
@@ -7,7 +7,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-    <body>
+    <h:body>
 
         <ui:composition template="/resources/template/template.xhtml">
 
@@ -690,5 +690,5 @@
 
         </ui:composition>
 
-    </body>
+    </h:body>
 </html>
