--- a/src/main/webapp/opd_search_bill_own.xhtml
+++ b/src/main/webapp/opd_search_bill_own.xhtml
@@ -81,8 +81,10 @@
                                      paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                      rowsPerPageTemplate="5,10,25,50"
                                      >
-                            <p:column headerText="No" styleClass="alignTop" width="15">
-                                <h:outputLabel value="#{i+1}"/>
+                            <p:column headerText="No" filterBy="#{bill.id}" filterMatchMode="contains"
+                                      sortBy="#{bill.id}"
+                                      styleClass="alignTop" width="15">
+                                <h:outputLabel value="#{bill.id}"/>
                             </p:column>
                             <p:column headerText="Bill No" sortBy="#{bill.insId}" filterBy="#{bill.insId}" >                                
                                 <p:commandLink id="billNo" ajax="false" value="#{bill.insId}" action="#{searchController.viewOPD(bill)}">
