Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/lab/investigation_format.xhtml
+++ b/src/main/webapp/lab/investigation_format.xhtml
@@ -73,7 +73,7 @@
                                                 <p:outputLabel value="Analyzer" ></p:outputLabel>
                                                 <p:selectOneMenu value="#{investigationItemController.machine}" >
                                                     <f:selectItem itemLabel="Select" ></f:selectItem>
-                                                    <f:selectItems value="#{machineController.institutionMachines}" ></f:selectItems>
+                                                    <f:selectItems value="#{machineController.items}" ></f:selectItems>
                                                 </p:selectOneMenu>
 
 
@@ -439,7 +439,7 @@
                                             <h:outputText value="Machine"/>
                                             <p:selectOneMenu value="#{investigationItemController.current.machine}" >
                                                 <f:selectItem itemLabel="Select" ></f:selectItem>
-                                                <f:selectItems value="#{machineController.institutionMachines}" ></f:selectItems>
+                                                <f:selectItems value="#{machineController.items}" ></f:selectItems>
                                             </p:selectOneMenu>
 
                                             <h:outputText value="Test"/>
