--- a/src/main/webapp/lab/administration.xhtml
+++ b/src/main/webapp/lab/administration.xhtml
@@ -67,6 +67,7 @@
                                 <p:panelGrid columns="1" styleClass="alignTop" rendered="#{webUserController.hasPrivilege('LabSetUp')}">
                                      <p:commandButton  styleClass="linkButton" ajax="false" value="Report Samples" actionListener="#{investigationController.listAllIxs}" action="/lab/report_samples"  />
                                     <p:commandButton  styleClass="linkButton" ajax="false" value="Report Dynamic Lables" action="/lab/report_dynamic_lables"  />
+                                    <p:commandButton  styleClass="linkButton" ajax="false" value="Upload Ix" action="#{investigationItemController.toUploadJsonToCreateAnInvestigation()}" />
                                     <p:commandButton  styleClass="linkButton" ajax="false" value="Developer" action="/lab/setup" />
                                 
                                 </p:panelGrid>
