--- a/src/main/webapp/admin/admin_items_index.xhtml
+++ b/src/main/webapp/admin/admin_items_index.xhtml
@@ -1,96 +1,112 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:h="http://java.sun.com/jsf/html">
-
-    <h:body>
-        <ui:composition template="/resources/template/template.xhtml">
-            <ui:define name="content">
-
-                <div class="row" >
-                    <div class="col-md-3" >
-                        <h:form>
-                            <p:accordionPanel  >
-                                <p:tab title="Items" >
-
-                                    <h:commandLink class="btn btn-primary w-100 mb-3"
-                                                   action="#{institutionController.toAddNewInstitution()}" 
-                                                   >
-                                        <i class="bi bi-building-add float-left"></i>
-                                        <span class="float-right">Add New Investigation</span>
-                                    </h:commandLink>
-                                    <h:commandLink class="btn btn-primary w-100 mb-3"  
-                                                   action="#{institutionController.toListInstitutions()}" 
-                                                   >
-                                        <i class="bi bi-building-check"></i>
-                                        List Investigations
-                                    </h:commandLink>
+<!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
+                template="/resources/template/template.xhtml"
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:p="http://primefaces.org/ui">
 
 
-                                    <h:commandLink class="btn btn-primary w-100 mb-3"  
-                                                   action="#{departmentController.toAddNewDepartment()}" 
-                                                   >
-                                        <i class="bi bi-building-fill-add"></i>
-                                        Add New Department
-                                    </h:commandLink>
-                                    <h:commandLink class="btn btn-primary w-100 mb-3"  
-                                                   action="#{departmentController.toListDepartments()}" 
-                                                   >
-                                        <i class="bi bi-building-fill "></i>
-                                        List Departments
-                                    </h:commandLink>
+    <ui:define name="content">
+
+        <div class="row" >
+            <div class="col-md-3" >
+                <h:form>
+
+                    <p:panel header="Manage Items/Services" rendered="true">
+                        <p:accordionPanel >
+                            <p:tab title="Manage Investigations">
+                                <h:panelGrid columns="1" >
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Investigations" action="/lab/investigation" />
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Investigation Fees" action="/lab/investigation_fee" />
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" disabled="true" value="Add New Investigation" action="/opd_service_category" />
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" disabled="true" value="List Investigations" action="/opd_service_subcategory" />
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Upload Investigations" action="#{investigationController.uploadJsonToCreateAnInvestigations()}" />
+       
+
+                                </h:panelGrid>
+                            </p:tab>
+                            <p:tab title="Manage Services">
+                                <h:panelGrid columns="1" >
 
 
-                                    <p:commandButton  styleClass="linkButton" ajax="false" value="Institution Branch" action="/lab/institution_branch" onclick="onSubmitButton();"/>
-                                    <p:commandButton  styleClass="linkButton" ajax="false" value="Departments" action="/management/department" onclick="onSubmitButton();"/>
-                                    <p:commandButton  styleClass="linkButton" ajax="false" value="Collecting Centres" action="/lab/collecting_centre" onclick="onSubmitButton();"/>
-                                    <p:commandButton  styleClass="linkButton" ajax="false" value="Credit Companies" action="/lab/credit_company" onclick="onSubmitButton();"/>
-                                    <p:commandButton  styleClass="linkButton" ajax="false" value="Area" action="area" onclick="onSubmitButton();"/>
-                                    <p:commandButton  styleClass="linkButton" ajax="false" value="Add Signature for staff" action="admin_staff_signature" onclick="onSubmitButton();"/>
-
-                                </p:tab>
-                                <p:tab title="Preferences" >
-
-                                    <p:panelGrid columns="1">
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Investigations" action="/lab/investigation" />
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Investigation Fees" action="/lab/investigation_fee" />
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Service Categories" action="/opd_service_category" />
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Service Subcategories" action="/opd_service_subcategory" />
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Service" action="/opd_service" />
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Inward Service" action="/inward/inward_service" />
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Theatre Service" action="/inward/theatre_service" />
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Bill Expenses" action="/common/bill_expenses" />
 
 
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Relationships" action="relationships" ></p:commandButton>
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Religions" action="/common/religion" ></p:commandButton>
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Nationalities" action="/common/nationality" ></p:commandButton>
 
-                                        <p:commandButton  styleClass="linkButton" ajax="false" value="Program Preferences" action="#{sessionController.toManageApplicationPreferences}" onclick="onSubmitButton();"/>
-                                        <p:commandButton  styleClass="linkButton" ajax="false" value="Institution Preferences" action="#{sessionController.toManageIntitutionPreferences()}" onclick="onSubmitButton();"/>
-                                        <p:commandButton  styleClass="linkButton" ajax="false" value="Department Preferences" action="#{sessionController.toManageDepartmentPreferences()}" onclick="onSubmitButton();"/>
-
-                                    </p:panelGrid>                     
-                                </p:tab>
-                                <p:tab title="Developer" >
-
-                                    <p:panelGrid columns="1">
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Bulk Delete of Services" action="opd_service_list_to_remove" />
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Bulk Un-Delete of Services" action="/common/item_bulk_un_delete" />
 
 
-                                        <p:commandButton  styleClass="linkButton" ajax="false" value="Bulk Delete Institutions" action="/admin/institution_bulk_delete" onclick="onSubmitButton();"/>
-                                        <p:commandButton  styleClass="linkButton" ajax="false" value="Bulk Delete Departments" action="/admin/department_bulk_delete" onclick="onSubmitButton();"/>
+                                </h:panelGrid>
+                            </p:tab>
+                            <p:tab title="Manage Metadata">
+                                <h:panelGrid columns="1" >
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Relationships" action="relationships" ></p:commandButton>
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Forms" action="/common/form_format_category" ></p:commandButton>
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Form Format" action="/common/form_format" ></p:commandButton>
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Categories" action="/common/metadata_super_category" ></p:commandButton>
+                                </h:panelGrid>
+                            </p:tab>
+                            <p:tab title="Bulk Transactions">
+                                <h:panelGrid columns="1" >
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Bulk Delete of Services" action="opd_service_list_to_remove" />
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Bulk Un-Delete of Services" action="/common/item_bulk_un_delete" />
 
-                                    </p:panelGrid>                     
-                                </p:tab>
-                            </p:accordionPanel>
-                        </h:form>
-                    </div>
-                    <div class="col-md-9" >
-                        <ui:insert name="admin" >
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Bulk Delete of Investigations" action="/lab/investigation_list_to_remove" />
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Bulk Un-Delete of Investigations" action="/common/investigation_bulk_un_delete" />
 
-                        </ui:insert>
-
-                    </div>
-                </div>
-
-
+                                </h:panelGrid>
+                            </p:tab>
+                            <p:tab title="Setup">
+                                <h:panelGrid columns="1" >
+                                    <p:commandButton  class="btn btn-primary w-100 my-2" 
+                                                     ajax="false" 
+                                                     value="Create New Items for New Institution" 
+                                                     action="/dataAdmin/create_items_for_new_institution" 
+                                                     />
 
 
-            </ui:define>
+                                    <p:commandButton  class="btn btn-primary w-100 my-2" 
+                                                     ajax="false" 
+                                                     value="Create New Items by Excel Upload" 
+                                                     action="/dataAdmin/create_items_for_new_institution" 
+                                                     />
 
 
-        </ui:composition>
+                                </h:panelGrid>
+                            </p:tab>
+                        </p:accordionPanel>
 
-    </h:body>
-</html>
+                    </p:panel>
+                </h:form>
+            </div>
+            <div class="col-md-9" >
+                <ui:insert name="item" >
+                    
+                </ui:insert>
+            </div>
+
+        </div>
+
+
+
+
+
+
+
+
+    </ui:define>
+
+</ui:composition>
