--- a/src/main/webapp/webcontent/web_content.xhtml
+++ b/src/main/webapp/webcontent/web_content.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <body>
 
@@ -17,14 +18,13 @@
                             <h:outputLabel class="form-label" for="txtName" value="Name" ></h:outputLabel>
                             <h:inputText class="form form-control" id="txtName" value="#{webContentController.selected.name}"></h:inputText>
 
-                            <h:outputLabel class="form-label" for="txtSinhala"  value="Sinhala" ></h:outputLabel>
-                            <h:inputText  class="form form-control" id="txtSinhala" value="#{webContentController.selected.sinhala}"></h:inputText>
+                            <h:outputLabel class="form-label" for="txtContents"  value="Contents" ></h:outputLabel>
+                            <h:inputText  class="form form-control" id="txtContents" value="#{webContentController.selected.shortContext}"></h:inputText>
 
-                            <h:outputLabel class="form form-label" for="txtTamil"  value="Tamil" ></h:outputLabel>
-                            <h:inputText  class="form form-control" id="txtTamil" value="#{webContentController.selected.tamil}"></h:inputText>
-
-                            <h:outputLabel class="form form-label" for="txtEnglish"  value="English" ></h:outputLabel>
-                            <h:inputText   class="form form-control" id="txtEnglish" value="#{webContentController.selected.english}"></h:inputText>
+                            <h:outputLabel class="form-label" for="cmbLang"  value="Contents" ></h:outputLabel>
+                            <h:selectOneMenu id="cmbLang" class="form form-control" value="#{webContentController.selected.webLanguage}" >
+                                <f:selectItems value="#{webLanguageController.items}" var="l" itemLabel="#{l.name}" itemValue="#{l}" ></f:selectItems>
+                            </h:selectOneMenu>
 
                             <h:outputLabel class="form form-label" for="txtOrder"  value="Order No" ></h:outputLabel>
                             <h:inputText class="form form-control" id="txtOrder" value="#{webContentController.selected.orderNo}"></h:inputText>
