Signed-off-by: Buddhika <buddhika@ohmis1.asia-southeast1-b.c.my-project-1537433467858.internal>

--- a/src/main/webapp/lab/administration.xhtml
+++ b/src/main/webapp/lab/administration.xhtml
@@ -9,6 +9,7 @@
 
         <ui:composition template="/resources/template/template.xhtml">
             <ui:define name="content">
+                fsd
                 <h:form>
                     <p:panel header="Administration ">
                         <p:tabView orientation="left">
