--- a/src/main/webapp/lab/investigation_list.xhtml
+++ b/src/main/webapp/lab/investigation_list.xhtml
@@ -25,12 +25,20 @@
                         <p:commandButton id="excel" ajax="false" value="Excel"  >
                             <p:dataExporter target="tbl" type="csv" fileName="List of All Investigations"  />
                         </p:commandButton>
+                        <p:commandButton value="Download as JSON" ajax="false"  icon="ui-icon-arrowthick-1-s">
+                            <p:fileDownload value="#{investigationItemController.ixToJsonFile}" />
+                        </p:commandButton>
                     </f:facet>
-                    <p:dataTable id="tbl" rowIndexVar="rowIndex" value="#{investigationController.allIxs}" var="ix" 
+                    <p:dataTable id="tbl" 
+                                 rowIndexVar="rowIndex" 
+                                 value="#{investigationController.allIxs}" 
+                                 var="ix" 
+                                 
                                  rows="20"
                                  paginator="true"
                                  paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                  rowsPerPageTemplate="20, 50, 100" 
+                                 
                                  >
                         <p:column headerText="No." width="30">
                             <h:outputLabel value="#{rowIndex + 1}" ></h:outputLabel>
