Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/admin/institution.xhtml
+++ b/src/main/webapp/admin/institution.xhtml
@@ -38,6 +38,12 @@
                                     </h:outputText>
                                     <p:inputText autocomplete="off"  value="#{institutionController.current.code}"  >
                                     </p:inputText> 
+
+                                    <h:outputText value="Short Code" >                                        
+                                    </h:outputText>
+                                    <p:inputText autocomplete="off"  value="#{institutionController.current.institutionCode}"  >
+                                    </p:inputText> 
+
                                     <h:outputText value="Point of Issue No" >                                        
                                     </h:outputText>
                                     <p:inputText autocomplete="off"  value="#{institutionController.current.pointOfIssueNo}"  >
