xhtml & css errors remove in the whole project Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/inward/inward_room_facility.xhtml
+++ b/src/main/webapp/inward/inward_room_facility.xhtml
@@ -15,7 +15,7 @@
                     <p:graphicImage library="image" name="back.jpg" styleClass="backButton"></p:graphicImage>
                 </h:commandLink>
                 
-                <p:growl autoUpdate="true" />
+                <p:growl  />
                 <p:focus id="selectFocus" context="gpSelect" />
                 <p:focus id="detailFocus" context="gpDetail" />
 
