--- a/src/main/webapp/opd_bill_package.xhtml
+++ b/src/main/webapp/opd_bill_package.xhtml
@@ -62,7 +62,7 @@
                                         <p:ajax event="tabChange"  process="@this" listener="#{billPackageController.onTabChange}" />
 
                                         <p:tab id="tabNewPt" title="New Patient"  >
-                                            <ez:patientDetail controller="#{billPackageController}"/>
+                                            <ez:patientDetail />
                                         </p:tab>
                                         <p:tab id="tabSearchPt" title="Search Patient">
 
