--- a/src/main/webapp/opd_bill_package_medical.xhtml
+++ b/src/main/webapp/opd_bill_package_medical.xhtml
@@ -58,7 +58,7 @@
                                         <p:ajax event="tabChange"  process="@this" listener="#{billPackageMedicalController.onTabChange}" />
 
                                         <p:tab id="tabNewPt" title="New Patient"  >
-                                            <ez:patientDetail controller="#{billPackageMedicalController}"/>                                            
+                                            <ez:patientDetail />                                            
                                         </p:tab>
                                         <p:tab id="tabSearchPt" title="Search Patient">
 
