--- a/src/main/webapp/store/asset_category/List.xhtml
+++ b/src/main/webapp/store/asset_category/List.xhtml
@@ -10,7 +10,7 @@
 
         <ui:define name="content">
             <h:outputStylesheet library="css" name="jsfcrud.css"/>
-            <p:growl id="growl" autoUpdate="false" ></p:growl>
+            <p:growl id="growl"  ></p:growl>
             <h:form id="AssetCategoryListForm">
                     
                 <p:panel header="Manage Asset Categories">
