--- a/src/main/webapp/store/consumable_category/List.xhtml
+++ b/src/main/webapp/store/consumable_category/List.xhtml
@@ -12,7 +12,7 @@
         
         <ui:define name="content">
             <h:outputStylesheet library="css" name="jsfcrud.css"/>
-            <p:growl id="growl" autoUpdate="false" ></p:growl>
+            <p:growl id="growl"  ></p:growl>
             <h:form id="ConsumableCategoryListForm">
                 
                 <p:panel header="Manage Comsumable Categories">
