--- a/src/main/webapp/store/make_list.xhtml
+++ b/src/main/webapp/store/make_list.xhtml
@@ -10,7 +10,7 @@
 
         <ui:define name="content">
             <h:outputStylesheet library="css" name="jsfcrud.css"/>
-            <p:growl id="growl" autoUpdate="false" ></p:growl>
+            <p:growl id="growl"  ></p:growl>
             <h:form id="MakeListForm">
                 <p:panel header="Makes">
                     <p:dataTable id="datalist" value="#{makeController.items}" var="item"
